@@ -1,5 +1,5 @@
 #
-# $Id: makefile.bc,v 1.79 2003/12/19 01:32:39 fsgiudice Exp $
+# $Id: makefile.bc,v 1.80 2003/12/21 23:35:26 fsgiudice Exp $
 #
 
 #
@@ -348,6 +348,7 @@ RTL_LIB_OBJS = \
    $(RTL_OBJ_DIR)\gt.obj \
    $(RTL_OBJ_DIR)\gtapi.obj \
    $(RTL_OBJ_DIR)\gtapiu.obj \
+   $(RTL_OBJ_DIR)\gtgraph.obj \
    $(RTL_OBJ_DIR)\gx.obj \
    $(RTL_OBJ_DIR)\hardcr.obj \
    $(RTL_OBJ_DIR)\hbbitf.obj \
@@ -1751,6 +1752,9 @@ $(RTL_OBJ_DIR)\gtapi.obj : $(RTL_DIR)\gtapi.c
    $(CC) $(CLIBFLAGS) -o$@ $**
 
 $(RTL_OBJ_DIR)\gtapiu.obj : $(RTL_DIR)\gtapiu.c
+   $(CC) $(CLIBFLAGS) -o$@ $**
+
+$(RTL_OBJ_DIR)\gtgraph.obj : $(RTL_DIR)\gtgraph.c
    $(CC) $(CLIBFLAGS) -o$@ $**
 
 $(RTL_OBJ_DIR)\gx.obj : $(RTL_DIR)\gx.c
