@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2133 2004/01/25 12:52:37 andijahja Exp $
+ * $Id: ChangeLog,v 1.2134 2004/01/25 13:17:52 jonnymind Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,13 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-01-25 16:05 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
+  * Makefile.bc
+    + Added gtgraph support
+  
+  * source/rtl/gtwvt/gtwvt.c
+    + Added support for gtgraph
 
 2004-01-25 19:05 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
   * source/rdd/dbfcdx/dbfcdx1.c
